--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,20 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+                <!-- https://mvnrepository.com/artifact/org.webjars/angularjs -->
+                <dependency>
+                    <groupId>org.webjars</groupId>
+                    <artifactId>angularjs</artifactId>
+                    <version>1.7.5</version>
+                </dependency>
+                <!-- https://mvnrepository.com/artifact/org.webjars/bootstrap -->
+                <dependency>
+                    <groupId>org.webjars</groupId>
+                    <artifactId>bootstrap</artifactId>
+                    <version>4.1.3</version>
+                </dependency>
+
+
 	</dependencies>
 
 	<build>
