--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.6.RELEASE</version>
+		<version>2.1.2.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -118,6 +118,26 @@
                     <artifactId>bootstrap</artifactId>
                     <version>4.1.3</version>
                 </dependency>
+                <!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
+                <dependency>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-web</artifactId>
+                    <version>5.1.4.RELEASE</version>
+                </dependency>
+                <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+                <dependency>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-context</artifactId>
+                    <version>5.1.4.RELEASE</version>
+                </dependency>
+                <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+                <dependency>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-core</artifactId>
+                    <version>2.9.8</version>
+                </dependency>
+
+
 
 
 	</dependencies>
